--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@astrojs/svelte": "^0.0.2",
+    "@astrojs/turbolinks": "^0.0.2",
     "@babel/core": "^7.17.7",
     "@types/flexsearch": "^0.7.3",
     "astro": "0.25.2",
