--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,11 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/sitemap": "^0.1.0",
     "@astrojs/svelte": "^0.0.2",
     "@astrojs/turbolinks": "^0.0.2",
     "@babel/core": "^7.17.7",
     "@types/flexsearch": "^0.7.3",
-    "astro": "0.25.2",
+    "astro": "1.0.0-beta.2",
     "autoprefixer": "^10.4.4",
     "cssnano": "^5.1.4",
     "front-matter": "^4.0.2",
