--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -8,7 +8,8 @@
     "paths": {
       "components:*": ["src/components/*"],
       "layouts:*": ["src/layouts/*"],
-      "styles:*": ["src/styles/*"]
+      "styles:*": ["src/styles/*"],
+      "other:*": ["src/other/*"]
     }
   }
 }
