--- a/packages/reporter-element/package.json
+++ b/packages/reporter-element/package.json
@@ -15,7 +15,11 @@
     "test": "uvu -r tsm -r global-jsdom/register tests -i common",
     "test:ci": "nyc pnpm test"
   },
-  "author": "Pablo Berganza <pablo@berganza.dev>",
+  "author": {
+    "name": "Pablo Berganza",
+    "email": "pablo@berganza.dev",
+    "url": "https://pablo.berganza.dev"
+  },
   "license": "MIT",
   "repository": "github:pablo-abc/felte",
   "homepage": "https://felte.dev",
@@ -43,7 +47,7 @@
   },
   "exports": {
     ".": "./dist/index.js",
-    "./felte-validation-message": "./felte-validation-message",
+    "./felte-validation-message": "./felte-validation-message/index.js",
     "./package.json": "./package.json"
   }
 }
