--- a/packages/reporter-react/package.json
+++ b/packages/reporter-react/package.json
@@ -5,7 +5,11 @@
   "main": "dist/index.cjs",
   "module": "dist/esm/index.js",
   "sideEffects": false,
-  "author": "Pablo Berganza <pablo@berganza.dev>",
+  "author": {
+    "name": "Pablo Berganza",
+    "email": "pablo@berganza.dev",
+    "url": "https://pablo.berganza.dev"
+  },
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-react",
   "keywords": [
