--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -4,7 +4,11 @@
   "description": "An error reporter for Felte using a Solid component",
   "main": "dist/index.js",
   "sideEffects": false,
-  "author": "Pablo Berganza <pablo@berganza.dev>",
+  "author": {
+    "name": "Pablo Berganza",
+    "email": "pablo@berganza.dev",
+    "url": "https://pablo.berganza.dev"
+  },
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/reporter-solid",
   "keywords": [
