--- a/packages/validator-vest/package.json
+++ b/packages/validator-vest/package.json
@@ -12,6 +12,13 @@
   },
   "sideEffects": false,
   "author": "Panagiotis Kapros <kapros@gmail.com>",
+  "contributors": [
+    {
+      "name": "Pablo Berganza",
+      "email": "pablo@berganza.dev",
+      "url": "https://pablo.berganza.dev"
+    }
+  ],
   "repository": "github:pablo-abc/felte",
   "homepage": "https://github.com/pablo-abc/felte/tree/main/packages/validator-vest",
   "keywords": [
