--- a/packages/validator-vest/package.json
+++ b/packages/validator-vest/package.json
@@ -36,6 +36,9 @@
     "test": "uvu -r tsm -r global-jsdom/register tests -i common",
     "test:ci": "nyc -n src pnpm test"
   },
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
   "dependencies": {
     "@felte/common": "workspace:*"
