--- a/packages/reporter-react/package.json
+++ b/packages/reporter-react/package.json
@@ -57,6 +57,7 @@
     "@rollup/plugin-node-resolve": "13.0.5",
     "@testing-library/react": "^12.1.2",
     "@types/node": "^15.12.4",
+    "@types/react": "^17.0.39",
     "babel-jest": "^26.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
