fix: fix peer deps issue

--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -46,11 +46,13 @@
     "types"
   ],
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.16.5",
     "@testing-library/svelte": "^3.0.3",
     "felte": "workspace:*",
     "module-alias": "^2.2.2",
     "pirates": "^4.0.5",
+    "rollup": "^2.77.3",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.46.4",
     "svelte-preprocess": "^4.6.9",
