--- a/examples/preact/basic/package.json
+++ b/examples/preact/basic/package.json
@@ -13,6 +13,7 @@
     "preact": "^10.5.15"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@preact/preset-vite": "^2.1.5",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
