--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "pnpm -r test",
     "test:ci": "pnpm -r test:ci",
     "lint": "eslint packages --max-warnings=0 --ignore-pattern *packages/site*",
-    "build": "pnpm -r build --filter='!@felte/site' --filter='!@example/*'",
-    "dev": "pnpm -r --parallel dev --filter='!@felte/site' --filter='!@example/*'",
+    "build": "pnpm -r --filter='!@felte/site' --filter='!@example/*' build",
+    "dev": "pnpm -r --parallel --filter='!@felte/site' --filter='!@example/*' dev",
     "prepare": "husky install",
     "publish": "pnpm i && pnpm lint && pnpm -r publish"
   },
