--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -173,6 +173,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "dawidmachon",
+      "name": "dawidmachon",
+      "avatar_url": "https://avatars.githubusercontent.com/u/44931854?v=4",
+      "profile": "https://github.com/dawidmachon",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
