fix(reporter-element): export custom-elements.json

--- a/packages/reporter-element/package.json
+++ b/packages/reporter-element/package.json
@@ -50,6 +50,7 @@
   "exports": {
     ".": "./dist/index.js",
     "./felte-validation-message": "./felte-validation-message/index.js",
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./custom-elements.json": "./custom-elements.json"
   }
 }
