--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,20 +9,19 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/sitemap": "^0.1.0",
-    "@astrojs/svelte": "^0.0.2",
-    "@astrojs/turbolinks": "^0.0.2",
+    "@astrojs/markdown-component": "^1.0.1",
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/svelte": "^1.0.1",
     "@babel/core": "^7.17.7",
     "@types/flexsearch": "^0.7.3",
-    "astro": "1.0.0-beta.24",
+    "astro": "1.4.7",
     "autoprefixer": "^10.4.4",
     "cssnano": "^5.1.4",
     "front-matter": "^4.0.2",
     "postcss": "^8.4.12",
     "postcss-preset-env": "^7.4.2",
     "prettier": "^2.6.0",
-    "svelte": "^3.46.4",
-    "vite": "^2.8.6"
+    "svelte": "^3.46.4"
   },
   "dependencies": {
     "@felte/element": "latest",
