--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -13,7 +13,7 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/svelte": "^1.0.1",
     "@babel/core": "^7.17.7",
-    "@types/flexsearch": "^0.7.3",
+    "@types/flexsearch": "0.7.3",
     "astro": "1.4.7",
     "autoprefixer": "^10.4.4",
     "cssnano": "^5.1.4",
@@ -30,7 +30,7 @@
     "@felte/validator-yup": "latest",
     "@shoelace-style/shoelace": "^2.0.0-beta.72",
     "felte": "latest",
-    "flexsearch": "^0.7.21",
+    "flexsearch": "0.7.21",
     "focus-visible": "^5.2.0",
     "lit": "^2.0.2",
     "prism-svelte": "^0.5.0",
