--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-commonjs": "^23.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
+    "@rollup/plugin-terser": "^0.1.0",
+    "@rollup/plugin-typescript": "^10.0.1",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/svelte": "^3.0.3",
     "@testing-library/user-event": "^13.1.3",
@@ -48,11 +50,11 @@
     "pnpm": "^7.9.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.38.0",
+    "rollup": "^3.5.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-rename-node-modules": "^1.3.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^2.0.5",
+    "rollup-plugin-ts": "^3.0.2",
     "sinon": "^13.0.1",
     "superstruct": "^0.15.0",
     "svelte": "^3.31.0",
@@ -61,10 +63,10 @@
     "svelte-portal": "^2.1.2",
     "tippy.js": "^6.0.0",
     "tslib": "^2.3.1",
-    "tsm": "^2.2.1",
-    "typedoc": "^0.22.10",
-    "typescript": "^4.5.5",
-    "uvu": "^0.5.3",
+    "tsm": "^2.3.0",
+    "typedoc": "^0.23.21",
+    "typescript": "^4.9.3",
+    "uvu": "^0.5.6",
     "uvu-expect": "^0.5.0",
     "uvu-expect-dom": "^0.2.4",
     "vest": "^4.0.1",
@@ -72,7 +74,7 @@
     "zod": "^1.11.13"
   },
   "volta": {
-    "node": "14.19.0"
+    "node": "16.18.1"
   },
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.14.5",
