--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@rollup/plugin-terser": "^0.1.0",
     "@rollup/plugin-typescript": "^10.0.1",
     "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.0.3",
     "@testing-library/user-event": "^13.1.3",
     "@types/chai": "^4.3.0",
     "@types/jsdom-global": "^3.0.2",
     "@types/sinon": "^10.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "@vitest/coverage-c8": "^0.25.3",
     "all-contributors-cli": "^6.20.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
@@ -44,7 +47,7 @@
     "front-matter": "^4.0.2",
     "global-jsdom": "^8.4.0",
     "husky": "^7.0.4",
-    "jsdom": "^19.0.0",
+    "jsdom": "^20.0.3",
     "mdsvex": "^0.9.0",
     "nyc": "^15.1.0",
     "pnpm": "^7.9.0",
@@ -70,11 +73,12 @@
     "uvu-expect": "^0.5.0",
     "uvu-expect-dom": "^0.2.4",
     "vest": "^4.0.1",
+    "vitest": "^0.25.3",
     "yup": "^0.32.9",
     "zod": "^1.11.13"
   },
   "volta": {
-    "node": "16.18.1"
+    "node": "18.12.1"
   },
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.14.5",
