--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -5,15 +5,16 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "browser": "dist/index.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "pnpm prebuild && NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm run build",
-    "test": "uvu -r tsm -r global-jsdom/register tests -i common",
-    "test:ci": "nyc pnpm test",
+    "vitest": "vitest",
+    "test": "vitest run",
+    "test:ci": "vitest run --coverage",
     "cem": "cem analyze --globs 'src/Felte*' --globs 'src/felte-*'"
   },
   "author": {
