chore(extender-persist): upgrade to node 18

--- a/packages/extender-persist/tsconfig.json
+++ b/packages/extender-persist/tsconfig.json
@@ -10,7 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
-    "declarationDir": "./dist"
+    "declarationDir": "types"
   },
   "include": ["src"]
 }
