--- a/packages/extender-persist/package.json
+++ b/packages/extender-persist/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.cjs",
   "browser": "dist/index.mjs",
   "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "type": "module",
   "files": [
     "dist"
@@ -31,16 +31,16 @@
     "build": "pnpm prebuild && cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm build && pnpm test",
-    "test": "uvu -r module-alias/register -r tsm -r global-jsdom/register tests -i common -i mocks",
-    "test:ci": "nyc -n src pnpm test"
+    "vitest": "vitest",
+    "test": "vitest run",
+    "test:ci": "vitest run --coverage"
   },
   "license": "MIT",
   "dependencies": {
     "@felte/common": "workspace:*"
   },
   "devDependencies": {
-    "felte": "workspace:*",
-    "module-alias": "^2.2.2",
+    "@felte/core": "workspace:*",
     "svelte": "^3.46.4"
   },
   "publishConfig": {
@@ -53,9 +53,5 @@
       "default": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
-  },
-  "_moduleAliases": {
-    "svelte": "tests/mocks/svelte.js",
-    "svelte/store": "node_modules/svelte/store/index.mjs"
   }
 }
