chore(reporter-dom): upgrade to node@18

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -13,5 +13,6 @@
     "declarationMap": true,
     "declarationDir": "./dist/esm"
   },
-  "include": ["src", "test"]
+  "include": ["src", "test"],
+  "exclude": ["test"]
 }
