--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/user-event": "^13.1.3",
     "@types/chai": "^4.3.0",
     "@types/jsdom-global": "^3.0.2",
+    "@types/node": "^18.11.9",
     "@types/sinon": "^10.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
