--- a/packages/felte/tsconfig.json
+++ b/packages/felte/tsconfig.json
@@ -10,7 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
-    "declarationDir": "./dist/types"
+    "declarationDir": "./dist/esm"
   },
   "typedocOptions": {
     "entryPoints": ["src/index.ts"],
