--- a/packages/reporter-preact/tsconfig.build.json
+++ b/packages/reporter-preact/tsconfig.build.json
@@ -15,7 +15,10 @@
     "noEmit": true,
     "jsx": "preserve",
     "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment"
+    "jsxFragmentFactory": "Fragment",
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "./dist/esm"
   },
-  "include": ["src", "tests"]
+  "include": ["src"]
 }
