--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@changesets/changelog-git": "^0.1.6",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^23.0.3",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.1",
@@ -65,6 +66,7 @@
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3",
     "vest": "^4.0.1",
+    "vite-plugin-solid": "^2.2.5",
     "vitest": "^0.25.3",
     "yup": "^0.32.9",
     "zod": "^1.11.13"
