--- a/packages/reporter-react/package.json
+++ b/packages/reporter-react/package.json
@@ -20,7 +20,7 @@
     "felte"
   ],
   "license": "MIT",
-  "types": "dist/index.d.ts",
+  "types": "dist/esm/index.d.ts",
   "type": "module",
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
@@ -41,8 +41,9 @@
     "build": "pnpm prebuild && rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm run build",
-    "test": "uvu -r tsm -r global-jsdom/register tests -i common",
-    "test:ci": "nyc -n src pnpm test"
+    "vitest": "vitest",
+    "test": "vitest run",
+    "test:ci": "vitest run --coverage"
   },
   "dependencies": {
     "@felte/common": "workspace:*"
@@ -53,15 +54,12 @@
     "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "^7.14.5",
     "@felte/react": "workspace:*",
-    "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-node-resolve": "13.0.5",
     "@testing-library/react": "^12.1.2",
     "@types/react": "^17.0.39",
     "babel-jest": "^26.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "rollup": "^2.52.1",
     "tsc-watch": "^4.4.0",
     "typescript": "~4.9.3"
   },
