--- a/packages/reporter-solid/tsconfig.build.json
+++ b/packages/reporter-solid/tsconfig.build.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
+    "declaration": true,
     "target": "es2017",
     "newLine": "LF",
     "moduleResolution": "node",
     "strict": true,
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react",
-    "module": "esnext",
-    "declaration": true,
-    "declarationMap": true,
-    "declarationDir": "./dist/esm"
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js",
+    "outDir": "./dist",
+    "module": "esnext"
   },
   "include": ["./src"],
   "exclude": ["node_modules/"]
