--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rollup/plugin-replace": "^5.0.1",
     "@rollup/plugin-terser": "^0.1.0",
     "@rollup/plugin-typescript": "^10.0.1",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.0.3",
@@ -55,6 +56,7 @@
     "rollup": "^3.5.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-rename-node-modules": "^1.3.1",
+    "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-ts": "^3.0.2",
     "superstruct": "^0.15.0",
     "svelte": "^3.31.0",
@@ -80,7 +82,6 @@
     "@solid-reach/rollup-plugin-jsx": "^0.0.2",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-dev-expression": "^0.2.2",
-    "rollup-plugin-svelte": "^7.1.0",
     "svelte-preprocess": "^4.6.9"
   },
   "browserslist": [
