--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -30,8 +30,9 @@
     "build": "pnpm prebuild && cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm build && pnpm test",
-    "test": "uvu -r tsm -r ./svelte-register.js -r global-jsdom/register -r module-alias/register tests -i common -i test -i .svelte",
-    "test:ci": "nyc -n src pnpm test"
+    "vitest": "vitest",
+    "test": "vitest run",
+    "test:ci": "vitest run --coverage"
   },
   "license": "MIT",
   "dependencies": {
@@ -46,17 +47,9 @@
     "types"
   ],
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.16.5",
-    "@testing-library/svelte": "^3.0.3",
-    "felte": "workspace:*",
-    "module-alias": "^2.2.2",
-    "pirates": "^4.0.5",
-    "rollup": "^2.77.3",
-    "rollup-plugin-svelte": "^7.1.0",
-    "svelte": "^3.46.4",
-    "svelte-preprocess": "^4.6.9",
-    "uvu": "^0.5.3"
+    "felte": "latest",
+    "svelte": "^3.53.1",
+    "vite": "^3.2.4"
   },
   "peerDependencies": {
     "svelte": "^3.31.0"
@@ -68,10 +61,5 @@
       "default": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
-  },
-  "_moduleAliases": {
-    "svelte": "node_modules/svelte/index.mjs",
-    "svelte/store": "node_modules/svelte/store/index.mjs",
-    "svelte/internal": "node_modules/svelte/internal/index.mjs"
   }
 }
