--- a/packages/validator-superstruct/package.json
+++ b/packages/validator-superstruct/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.cjs",
   "browser": "dist/index.mjs",
   "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "type": "module",
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
@@ -30,8 +30,9 @@
     "build": "pnpm prebuild && cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm build && pnpm test",
-    "test": "uvu -r tsm -r global-jsdom/register tests -i common",
-    "test:ci": "nyc -n src pnpm test"
+    "vitest": "vitest",
+    "test": "vitest run",
+    "test:ci": "vitest run --coverage"
   },
   "files": [
     "dist"
@@ -42,12 +43,11 @@
   },
   "devDependencies": {
     "@felte/core": "workspace:*",
-    "felte": "workspace:*",
-    "superstruct": "^0.15.0",
+    "superstruct": "^1.0.3",
     "svelte": "^3.46.4"
   },
   "peerDependencies": {
-    "superstruct": "^0.15.0"
+    "superstruct": "^1.0.3"
   },
   "publishConfig": {
     "access": "public"
