--- a/packages/validator-zod/package.json
+++ b/packages/validator-zod/package.json
@@ -55,6 +55,7 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs",
       "default": "./dist/index.mjs"
