--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -51,6 +51,7 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/esm/index.d.ts",
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.cjs",
       "default": "./dist/esm/index.js"
