--- a/packages/reporter-element/package.json
+++ b/packages/reporter-element/package.json
@@ -49,8 +49,14 @@
     "access": "public"
   },
   "exports": {
-    ".": "./dist/index.js",
-    "./felte-validation-message": "./felte-validation-message/index.js",
+    ".": {
+      "types": "./types/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./felte-validation-message": {
+      "types": "./dist/types/felte-validation-message.d.ts",
+      "default": "./felte-validation-message/index.js"
+    },
     "./package.json": "./package.json",
     "./custom-elements.json": "./custom-elements.json"
   }
