--- a/packages/reporter-preact/package.json
+++ b/packages/reporter-preact/package.json
@@ -27,6 +27,7 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/esm/index.d.ts",
       "import": "./dist/esm/index.js",
       "require": "./dist/index.cjs",
       "default": "./dist/esm/index.js"
