--- a/packages/validator-superstruct/package.json
+++ b/packages/validator-superstruct/package.json
@@ -54,6 +54,7 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs",
       "default": "./dist/index.mjs"
