--- a/packages/vanilla/package.json
+++ b/packages/vanilla/package.json
@@ -48,6 +48,7 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/esm/index.d.ts",
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.cjs",
       "default": "./dist/esm/index.js"
