--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -56,6 +56,7 @@
   },
   "exports": {
     ".": {
+      "types": "./types/index.d.ts",
       "svelte": "./src/index.js",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs",
