--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -52,10 +52,11 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.14.5",
     "@felte/solid": "workspace:*",
+    "@solidjs/testing-library": "^0.7.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "acorn": "^8.7.0",
     "acorn-jsx": "^5.3.2",
     "solid-js": "^1.6.2",
-    "solid-testing-library": "^0.5.0",
     "typescript": "~4.9.3"
   },
   "peerDependencies": {
