--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "@vitest/coverage-c8": "^0.32.0",
+    "@vitest/coverage-v8": "^0.32.0",
     "all-contributors-cli": "^6.20.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
