--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felte/reporter-svelte",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "An error reporter for Felte using a Svelte component",
   "main": "dist/index.cjs",
   "svelte": "src/index.js",
@@ -47,7 +47,7 @@
     "types"
   ],
   "devDependencies": {
-    "felte": "latest",
+    "felte": "workspace:*",
     "svelte": "^3.53.1",
     "vite": "^4.3.9"
   },
