--- a/examples/svelte/basic/package.json
+++ b/examples/svelte/basic/package.json
@@ -10,14 +10,14 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@tsconfig/svelte": "^2.0.1",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.9.8",
+    "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@tsconfig/svelte": "^4.0.1",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.4",
+    "svelte-preprocess": "^5.0.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.9.3",
-    "vite": "^2.7.2"
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   },
   "dependencies": {
     "@felte/reporter-svelte": "latest",
