--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -47,8 +47,9 @@
     "types"
   ],
   "devDependencies": {
+    "@testing-library/svelte": "^3.2.2",
     "felte": "workspace:*",
-    "svelte": "^3.53.1",
+    "svelte": "^3.59.1",
     "vite": "^4.3.9"
   },
   "peerDependencies": {
