--- a/packages/reporter-preact/package.json
+++ b/packages/reporter-preact/package.json
@@ -54,6 +54,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@felte/preact": "workspace:*",
+    "@preact/preset-vite": "^2.1.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/preact": "^3.2.2",
     "@testing-library/preact-hooks": "^1.1.0",
