--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -40,9 +40,8 @@
     "build": "pnpm prebuild && NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm run build",
-    "vitest": "vitest",
-    "test": "vitest run",
-    "test:ci": "vitest run --coverage"
+    "test": "jest",
+    "test:ci": "jest --coverage"
   },
   "dependencies": {
     "@felte/common": "workspace:*"
@@ -52,10 +51,14 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.14.5",
     "@felte/solid": "workspace:*",
-    "@solidjs/testing-library": "^0.7.1",
+    "@solidjs/testing-library": "^0.8.4",
     "@testing-library/jest-dom": "^5.16.5",
     "acorn": "^8.7.0",
     "acorn-jsx": "^5.3.2",
+    "babel-jest": "^26.6.3",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "solid-jest": "^0.2.0",
     "solid-js": "^1.6.2",
     "typescript": "~4.9.3"
   },
