--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -182,6 +182,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/778583?v=4",
       "profile": "https://github.com/uhon",
       "contributions": ["doc"]
+    },
+    {
+      "login": "BradLewis",
+      "name": "Bradley Lewis",
+      "avatar_url": "https://avatars.githubusercontent.com/u/22850972?v=4",
+      "profile": "https://github.com/BradLewis",
+      "contributions": ["doc"]
     }
   ],
   "contributorsPerLine": 7
