docs: add @xvenge00 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -196,6 +196,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/1277737?v=4",
       "profile": "https://github.com/SirbyAlive",
       "contributions": ["code"]
+    },
+    {
+      "login": "xvenge00",
+      "name": "xvenge00",
+      "avatar_url": "https://avatars.githubusercontent.com/u/22448115?v=4",
+      "profile": "https://github.com/xvenge00",
+      "contributions": ["code"]
     }
   ],
   "contributorsPerLine": 7
