--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -26,6 +26,7 @@
   "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/types/index.d.ts",
       "solid": "./dist/source/index.jsx",
       "import": "./dist/esm/index.js",
       "browser": "./dist/esm/index.js",
