--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -34,7 +34,7 @@
     "test:ci": "vitest run --coverage"
   },
   "peerDependencies": {
-    "svelte": "^3.31.0 || ^4.0.0"
+    "svelte": "^3.31.0 || ^4.0.0 || ^5.0.0"
   },
   "files": [
     "dist"
