--- a/packages/reporter-preact/package.json
+++ b/packages/reporter-preact/package.json
@@ -60,7 +60,7 @@
     "babel-jest": "^26.6.3",
     "preact": "^10.11.3",
     "tsc-watch": "^4.4.0",
-    "typescript": "~4.9.3"
+    "typescript": "^5.6.3"
   },
   "peerDependencies": {
     "preact": "^10.0.0"
