--- a/packages/reporter-react/package.json
+++ b/packages/reporter-react/package.json
@@ -61,7 +61,7 @@
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "tsc-watch": "^4.4.0",
-    "typescript": "~4.9.3"
+    "typescript": "^5.6.3"
   },
   "peerDependencies": {
     "react": "^16.8.0 || >=17.0.0"
