--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.1.3",
@@ -34,21 +34,21 @@
     "@types/node": "^22.8.2",
     "@types/sinon": "^10.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "@vitest/coverage-v8": "^0.32.0",
     "all-contributors-cli": "^6.26.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-compat": "^4.0.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "eslint-plugin-testing-library": "^4.0.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-compat": "^6.0.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-svelte": "^2.46.0",
+    "eslint-plugin-testing-library": "^6.4.0",
     "front-matter": "^4.0.2",
     "husky": "^9.1.6",
     "jsdom": "^20.0.3",
-    "mdsvex": "^0.9.0",
+    "mdsvex": "^0.12.3",
     "pnpm": "^8.7.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
@@ -58,10 +58,10 @@
     "rollup-plugin-svelte": "^7.1.6",
     "rollup-plugin-ts": "^3.4.5",
     "superstruct": "^0.15.0",
-    "svelte": "^3.31.0",
+    "svelte": "^5.1.4",
     "svelte-focus-on": "^0.1.4",
     "svelte-markdown": "^0.1.6",
-    "svelte-portal": "^2.1.2",
+    "svelte-portal": "^2.2.1",
     "tippy.js": "^6.0.0",
     "tslib": "^2.3.1",
     "typedoc": "^0.23.21",
@@ -81,7 +81,7 @@
     "@solid-reach/rollup-plugin-jsx": "^0.0.4",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-dev-expression": "^0.2.2",
-    "svelte-preprocess": "^4.6.9"
+    "svelte-preprocess": "^6.0.3"
   },
   "browserslist": [
     "defaults",
