--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^5.2.4",
     "@testing-library/user-event": "^13.1.3",
     "@types/chai": "^4.3.0",
     "@types/jsdom-global": "^3.0.2",
@@ -67,8 +68,9 @@
     "typedoc": "^0.23.21",
     "typescript": "^5.6.3",
     "vest": "^4.0.1",
+    "vite": "^5.4.10",
     "vite-plugin-solid": "^2.7.0",
-    "vitest": "^0.34.3",
+    "vitest": "^2.1.4",
     "yup": "^1.2.0",
     "zod": "^1.11.13"
   },
