chore(example): fix svelte example

--- a/examples/svelte/basic/package.json
+++ b/examples/svelte/basic/package.json
@@ -20,7 +20,7 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "@felte/reporter-svelte": "workspace:*",
-    "felte": "workspace:*"
+    "@felte/reporter-svelte": "latest",
+    "felte": "latest"
   }
 }
