docs: add @alfredomariamilano as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -203,6 +203,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/22448115?v=4",
       "profile": "https://github.com/xvenge00",
       "contributions": ["code"]
+    },
+    {
+      "login": "alfredomariamilano",
+      "name": "Alfredo Maria Milano",
+      "avatar_url": "https://avatars.githubusercontent.com/u/20406650?v=4",
+      "profile": "https://www.alfredomm.com/",
+      "contributions": ["code"]
     }
   ],
   "contributorsPerLine": 7
