--- a/packages/validator-vest/tsconfig.json
+++ b/packages/validator-vest/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
+    "types": ["@testing-library/jest-dom"],
     "target": "es2017",
     "isolatedModules": true,
     "strict": true,
