--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es2017",
+    "types": ["vite/client", "@testing-library/jest-dom"],
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
