--- a/packages/reporter-element/tsconfig.json
+++ b/packages/reporter-element/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es2019",
+    "types": ["@testing-library/jest-dom"],
     "module": "ES2015",
     "lib": ["ES2019", "dom"],
     "useDefineForClassFields": false,
