--- a/packages/reporter-react/tsconfig.json
+++ b/packages/reporter-react/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2017",
+    "types": ["@testing-library/jest-dom", "vite/client"],
     "newLine": "LF",
     "moduleResolution": "node",
     "strict": true,
