--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -43,8 +43,8 @@
     "build": "pnpm prebuild && NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm run build",
-    "test": "jest",
-    "test:ci": "jest --coverage"
+    "test": "vitest run",
+    "test:ci": "vitest run --coverage"
   },
   "dependencies": {
     "@felte/common": "workspace:*"
@@ -52,15 +52,12 @@
   "devDependencies": {
     "@babel/core": "^7.17.0",
     "@felte/solid": "workspace:*",
-    "@solidjs/testing-library": "^0.8.4",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@solidjs/testing-library": "^0.8.10",
+    "@testing-library/jest-dom": "^6.6.2",
     "babel-jest": "^26.6.3",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
     "rollup-preset-solid": "^2.0.1",
-    "solid-jest": "^0.2.0",
-    "solid-js": "^1.8.6",
-    "typescript": "~4.9.3"
+    "solid-js": "^1.9.3",
+    "typescript": "~5.6.3"
   },
   "peerDependencies": {
     "solid-js": "^1.2.0"
