--- a/packages/validator-superstruct/tsconfig.json
+++ b/packages/validator-superstruct/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es2017",
+    "types": ["@testing-library/jest-dom"],
     "isolatedModules": true,
     "strict": true,
     "esModuleInterop": true,
